[gd_scene load_steps=5 format=3 uid="uid://d2m861kwkksmb"]

[ext_resource type="Script" uid="uid://cj6xhr0vn8ras" path="res://scenes/GUI/game_main/topbar/gui_action_points.gd" id="1_7e147"]
[ext_resource type="Texture2D" uid="uid://bhqydxgtda0mu" path="res://resources/sprites/icons/other/icon_action_points.png" id="1_6255u"]
[ext_resource type="AudioStream" uid="uid://cnjsxqrjyqthb" path="res://resources/sounds/SFX/bingo/ap_increased.wav" id="3_calfy"]
[ext_resource type="AudioStream" uid="uid://4gq5f4adh0ix" path="res://resources/sounds/SFX/bingo/ap_reduced.wav" id="4_al7mn"]

[node name="GUIActionPoints" type="HBoxContainer"]
offset_right = 19.0
offset_bottom = 12.0
theme_override_constants/separation = 0
script = ExtResource("1_7e147")

[node name="TextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_6255u")
stretch_mode = 3

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HUD"
theme_override_colors/font_color = Color(1, 0.921569, 0.341176, 1)
text = "xx"
horizontal_alignment = 1
vertical_alignment = 1

[node name="APIncreasedSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_calfy")
volume_db = 5.0
bus = &"SFX"

[node name="APDecreasedSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_al7mn")
volume_db = 5.0
bus = &"SFX"
